--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,9 @@
       name="Slack clone"
       content="Slack clone created using react"
     />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <title>Slack clone</title>
   </head>
   <body>
