--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Slack clone"
-      content="Slack clone created using react"
+      name="Lavander"
+      content="A chat application created using react"
     />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
